force-app/main/default/objects/FEC_Watcher__c/FEC_Watcher__c.object-meta.xml
<CustomObject>
    <description>Đối tượng để lưu trữ  thông tin các user đang follow-up Case</description>
    <label>Watcher</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Watchers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>