force-app/main/default/objects/FEC_Watcher__c/fields/FEC_Active__c.field-meta.xml
<CustomField>
    <fullName>FEC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái của người xem là đang được xem hay đã kết thúc rồi.
Liên quan đến luồng unfollow. Khi User Unfollow hệ thống sẽ cập nhật lại check box của trường Active trên Watcher từ Y - N</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>