force-app/main/default/objects/FEC_Watcher__c/fields/FEC_Follow_up_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Follow_up_Type__c</fullName>
    <description>Điều kiện follow mà User đã chọn</description>
    <label>Follow-up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Until Case is Resolved</fullName>
            </value>
            <value>
                <fullName>Until choosing Unfollow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>