force-app/main/default/objects/FEC_Watcher__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <description>Email ID của user đang follow-up Case (Email ID)</description>
    <label>User</label>
    <length>40</length>
    <type>Text</type>
</CustomField>