force-app/main/default/objects/FEC_Watcher__c/fields/FEC_User_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Role__c</fullName>
    <description>Role Name của User</description>
    <label>User Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>