force-app/main/default/objects/FEC_Watcher__c/fields/FEC_Watcher_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_Watcher_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Trường sử dụng để link đến User</description>
    <label>Watcher User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Watchers</relationshipName>
    <type>Lookup</type>
</CustomField>